<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        >


        <app.ceva.petapp.share.wigeds.TextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/prompt_notification"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_16sdp" />




    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:orientation="horizontal">
        <app.ceva.petapp.share.wigeds.TextViewRegular
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_noti_settings"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_5sdp"
            />

        <LinearLayout
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg_ash">



        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spNotificationType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:gravity="center">

        </androidx.appcompat.widget.AppCompatSpinner>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirmNotification"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/prompt_confirm"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_bg_blue"
        android:textSize="@dimen/_12sdp"/>

</LinearLayout>