<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".feature.Login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <app.ceva.petapp.share.wigeds.TextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/prompt_login_text"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/_24sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_90sdp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="vertical">



                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spCountryCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.appcompat.widget.AppCompatSpinner>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:background="@color/colorBottomnav"/>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_mobile"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth=".5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_check_mark"
                            android:inputType="number"
                            android:maxLength="13"
                            android:paddingRight="@dimen/_15sdp"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorButtonText"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/prompt_password"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth=".5dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:password="true"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorButtonText"
                        android:textSize="@dimen/_14sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <app.ceva.petapp.share.wigeds.TextViewBold
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="right"
                    android:text="@string/prompt_forget_pwd"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">


            <FrameLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <app.ceva.petapp.share.wigeds.TextViewSemibold
                    android:id="@+id/tvSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/rounded_button_bg_blue"
                    android:gravity="center"
                    android:text="@string/prompt_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/_5sdp"
                    app:srcCompat="@drawable/ic_right_right"
                    tools:ignore="VectorDrawableCompat" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <app.ceva.petapp.share.wigeds.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:text="@string/prompt_registration"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13sdp" />

                <LinearLayout
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <app.ceva.petapp.share.wigeds.TextViewSemibold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2sdp"
                        android:text="@string/prompt_signup"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_5sdp"
                        android:background="@drawable/dash_line" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>