<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".feature.Login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <app.ceva.petapp.share.wigeds.TextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/prompt_add_animal"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/_24sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_90sdp"
                android:orientation="vertical">



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth=".5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPetName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:inputType="text"
                        android:maxLength="13"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorButtonText" />

                </com.google.android.material.textfield.TextInputLayout>

                <app.ceva.petapp.share.wigeds.TextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Animal Type"
                    android:textColor="@color/colorEditText"
                    android:textSize="@dimen/_10sdp"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spAnimalType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorEditText"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">


            <FrameLayout
                android:id="@+id/llgoToDashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <app.ceva.petapp.share.wigeds.TextViewSemibold
                   android:id="@+id/tvAddPet"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/rounded_button_bg_blue"
                    android:gravity="center"
                    android:text="@string/prompt_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_16sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/_5sdp"
                    app:srcCompat="@drawable/ic_right_right"
                    tools:ignore="VectorDrawableCompat" />

            </FrameLayout>



        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>